support energy measurement

--- a/lec17/Makefile
+++ b/lec17/Makefile
@@ -1,8 +1,10 @@
+PCMROOT=/opt/intel/pcm
+
 TARGETS := matmul vecadd
 
 all: clean $(TARGETS)
 clean:
 	rm -f $(TARGETS) 2>/dev/null
 %: %.cpp
-	g++ -I../lec16/compute/include -O3 -o $@ $^ -lOpenCL -lpthread
+	g++ -I../lec16/compute/include -I$(PCMROOT) -O3 -o $@ $^ -lOpenCL -lpthread -L$(PCMROOT)/pcm.so -lpcm
 
